Fix issue with horizontal overflow.

--- a/html/scss/style.scss
+++ b/html/scss/style.scss
@@ -212,7 +212,7 @@ $cards: (
 }
 
 #panel-manage-subs {
-    overflow: scroll;
+    overflow-x: auto;
     
     .nav {
         background-color: $white;
